// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes the elevation to 6 on mouse entering the component 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation2 FundItem-fundItem-29 MuiPaper-rounded"
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  Fund Item
</div>
`;

exports[`changes the elevation to 6 on mouse entering the component 2`] = `
<div
  className="MuiPaper-root MuiPaper-elevation6 FundItem-fundItem-29 MuiPaper-rounded"
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  Fund Item
</div>
`;

exports[`changes the elevation to 6 on mouse entering the component 3`] = `
<div
  className="MuiPaper-root MuiPaper-elevation2 FundItem-fundItem-29 MuiPaper-rounded"
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  Fund Item
</div>
`;
